i kinda haven't commited in a while

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ add_executable(projectPleaseWork
         utilities/helperFunctions.cpp shaders/helperStruct.h utilities/helperFunctions.h Bodies/Solid/mouseIntersectStruct.h
         BVH/clothBVH.cpp BVH/clothBVH.h utilities/multiThreading.h utilities/multiThreading.cpp
         utilities/skybox.cpp utilities/skybox.h utilities/stb_image.h Bodies/Deformable/deformableSphere.cpp
-        Bodies/Deformable/deformableSphere.h Bodies/Deformable/deformableObjects.cpp Bodies/Deformable/deformableObjects.h BVH/defSphereBVH.cpp BVH/defSphereBVH.h BVH/BVH.cpp BVH/BVH.h)
+        Bodies/Deformable/deformableSphere.h Bodies/Deformable/deformableObjects.cpp Bodies/Deformable/deformableObjects.h BVH/defSphereBVH.cpp BVH/defSphereBVH.h BVH/BVH.cpp BVH/BVH.h Bodies/Deformable/texturedCloth.cpp Bodies/Deformable/texturedCloth.h Bodies/Deformable/deformableCube.cpp Bodies/Deformable/deformableCube.h)
 
 target_link_libraries(projectPleaseWork
         ${ALL_LIBS}
