--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable(projectPleaseWork
         utilities/skybox.cpp utilities/skybox.h utilities/stb_image.h Bodies/Deformable/deformableSphere.cpp
         Bodies/Deformable/deformableSphere.h Bodies/Deformable/deformableObjects.cpp Bodies/Deformable/deformableObjects.h
         BVH/defSphereBVH.cpp BVH/defSphereBVH.h BVH/BVH.cpp BVH/BVH.h Bodies/Deformable/texturedCloth.cpp Bodies/Deformable/texturedCloth.h
-        Bodies/Deformable/deformableCube.cpp Bodies/Deformable/deformableCube.h BVH/defCubeBVH.cpp BVH/defCubeBVH.h Bodies/Deformable/importedModels.cpp Bodies/Deformable/importedModels.h)
+        Bodies/Deformable/deformableCube.cpp Bodies/Deformable/deformableCube.h BVH/defCubeBVH.cpp BVH/defCubeBVH.h Bodies/Deformable/importedModels.cpp Bodies/Deformable/importedModels.h BVH/imBVH.cpp BVH/imBVH.h)
 
 target_link_libraries(projectPleaseWork
         ${ALL_LIBS}
@@ -60,7 +60,7 @@ add_definitions(
 
 set(CMAKE_CXX_STANDARD 11)
 # -O3/-O2 for optimization
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
 
 #add_executable(code main.cpp)
